feat(projects) - added status field
