# src/models/project-model.ts
@@ -2,11 +2,13 @@ import {
   AllowNull,
   Column,
   DataType,
+  Default,
   Model,
   NotEmpty,
   Table,
 } from 'sequelize-typescript';
 
+import {RecordStatus} from '../@types';
 import {ProjectAttr} from '../@types/entities';
 
 @Table({
@@ -35,6 +37,11 @@ class Project extends Model implements ProjectAttr {
   @AllowNull(true)
   @Column
   remarks?: string;
+
+  @AllowNull(false)
+  @Default('active')
+  @Column
+  status!: RecordStatus;
 }
 
 export default Project;
